--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -14,7 +14,7 @@
     <p>Delicious carbonara made with finest ingredients. </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>pasta</li>
+        <li>past</li>
         <li>salt</li>
         <li>sauce</li>
     </ul>
